<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <!--  LinearLayout titulo-->
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/titulo"
            android:gravity="center"
            android:text="@string/tituloApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>

    </LinearLayout>

    <!--  LinearLayout Nombre-->
    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:gravity="center"
            android:text="@string/nombre"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

        </TextView>

        <EditText
            android:gravity="center"
            android:id="@+id/Nombre"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

        </EditText>

    </LinearLayout>
    <!--  LinearLayout cedula-->
    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:gravity="center"
            android:text="@string/cedula"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

        </TextView>

        <EditText
            android:gravity="center"
            android:id="@+id/Cedula"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

        </EditText>

    </LinearLayout>
    <!--  LinearLayout fecha-->
    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:gravity="center"
            android:text="@string/fechaNacimiento"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

        </TextView>

        <EditText
            android:gravity="center"
            android:id="@+id/FechaNacimiento"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

        </EditText>

    </LinearLayout>
    <!--  LinearLayout buttons-->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <TextView
            android:id="@+id/tituloVotos"
            android:gravity="center"
            android:text="@string/tituloVotos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>

        <Button
            android:id="@+id/opcionA"
            android:text="@string/opcionA"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_weight="0.1">

        </Button>

        <Button
            android:id="@+id/opcionB"
            android:text="@string/opcionB"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1">

        </Button>

        <Button
            android:id="@+id/opcionC"
            android:text="@string/opcionC"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1">

        </Button>

    </LinearLayout>

</LinearLayout>